# TPO.businessCards

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
Themes/business-card-generator/: README.md
Themes/business-card-generator/project/: .thumbnail  Business Card Generator.dc.html
Themes/business-card-generator/project/_ds/tpo-group-design-system-479b5694-9cd3-4d0e-87d0-82e399e7752c/: README.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  colors_and_type.css
Themes/business-card-generator/project/_ds/tpo-group-design-system-479b5694-9cd3-4d0e-87d0-82e399e7752c/fonts/: fonts.css
api/: _cloudprinter.py  _generator.py  _models.py  _storage.py  orders.py
bizcard/: __init__.py  __main__.py  cli.py  config.py
bizcard/models/: __init__.py  card.py  contact.py
bizcard/services/: __init__.py  export.py  ingest.py  layout.py  qr.py  render.py
bizcard/templates/: __init__.py  anthropic_dark.py  anthropic_light.py  base.py  claude_dark.py  claude_minimal.py  registry.py  tpo_standard.py
examples/: example_usage.py
scripts/: download_fonts.py
src/: App.jsx
src/components/: CardPreview.jsx  ConfirmModal.jsx  OrderForm.jsx  StatusBanner.jsx
src/styles/: global.css
tests/: test_ingest.py  test_models.py  test_render.py
tests/fixtures/: sample_contacts.csv
